测试垃圾回收，打印到文件，打印GC前后详情